# syncrone-logger

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ResourceHacker.ini  SECURITY.md  build_installer.ps1  environment.yml  main.py  package_sfx.bat  patch_uac.py  pb980_receiver.py  pb980_replay_waveforms.py  pb980_simulator_gui.py  pyproject.toml  requirements.txt  setup_signing.ps1
.github/: CODEOWNERS
.github/workflows/: build.yml  build_msix.yml  build_simulator_msix.yml  test_suite.yml
docs/: Testing_Plan.md
src/syncrone/: main.py  simulator.py  watchdog.py
tests/: conftest.py  test_regression_baseline.py
tests/e2e/: test_ui.py
tests/integration/: test_database.py  test_reconnection.py
tests/unit/: test_config.py  test_pure_logic.py  test_snapshot.py
validation/: README.md  analyze_run1.py  analyze_run2.py  analyze_run3.py  analyze_summary.py  wfr_utils.py
